# B0626---Muhammad_Fazeel---Innovaxel---Backend-Developer

./: README.md  main.py  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: events.py  registrations.py
app/services/: event_service.py  registration_service.py
