[project]
name = "ems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic[email]>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
